[gd_scene load_steps=14 format=3 uid="uid://cmsd32g1ra52q"]

[ext_resource type="Script" path="res://spells/fireball/fireball.gd" id="1_hiag6"]
[ext_resource type="Texture2D" uid="uid://c2b4u3i74xnjp" path="res://spells/fireball/fireball.png" id="2_t8uaj"]
[ext_resource type="AudioStream" uid="uid://bnd6nvibq1f0a" path="res://spells/fireball/fireball_explosion.wav" id="3_ws7lv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jenhc"]
size = Vector2(18, 8)

[sub_resource type="Animation" id="Animation_knx3s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_qqh2x"]
resource_name = "flying"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}

[sub_resource type="Animation" id="Animation_thgg5"]
resource_name = "impact"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fn620"]
_data = {
"RESET": SubResource("Animation_knx3s"),
"flying": SubResource("Animation_qqh2x"),
"impact": SubResource("Animation_thgg5")
}

[sub_resource type="Gradient" id="Gradient_sa3pl"]
offsets = PackedFloat32Array(0, 0.733333, 0.977778)
colors = PackedColorArray(0.745098, 0.14902, 0.2, 1, 0.921569, 0.537255, 0.192157, 1, 0.968627, 0.886275, 0.419608, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_y0ym5"]
gradient = SubResource("Gradient_sa3pl")

[sub_resource type="Curve" id="Curve_pym7y"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.7, 0.736264), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_brrr8"]
curve = SubResource("Curve_pym7y")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_punue"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_min = -100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_brrr8")
color_ramp = SubResource("GradientTexture1D_y0ym5")

[node name="fireball" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_hiag6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_jenhc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_t8uaj")
hframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_fn620")
}

[node name="explosion" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_punue")
one_shot = true
explosiveness = 1.0
fixed_fps = 60

[node name="delete_timer" type="Timer" parent="."]

[node name="explosion_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ws7lv")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="delete_timer" to="." method="_on_delete_timer_timeout"]
